updates to homepage and headers

--- a/portfolio/aboutMe.html
+++ b/portfolio/aboutMe.html
@@ -8,6 +8,11 @@
   <body>
 
     <div class= "photographyTitle">
+      <div class="header">
+        <a href="index.html">
+      <img src="titleSlide1.png">
+      </a>
+      </div>
       <p>about me</p>
     </div>
 
