--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -14,6 +14,11 @@
     </div> -->
 
     <div class="photographyTitle">
+      <div class="header">
+        <a href="index.html">
+      <img src="titleSlide1.png">
+      </a>
+      </div>
       <p>photography</p>
       </div>
 
