--- a/portfolio/videoWork.html
+++ b/portfolio/videoWork.html
@@ -8,28 +8,61 @@
   <body>
 
     <div class="photographyTitle">
+      <div class="header">
+        <a href="index.html">
+      <img src="titleSlide1.png">
+      </a>
+      </div>
       <p>video work</p>
       </div>
 
     <div class="content">
-  <div class="contentImagePlacement">
-    </div>
-  <div class="contentImagePlacement">
-    </div>
-  <div class="contentImagePlacement">
-    </div>
-  <div class="contentImagePlacement">
-    </div>
-  <div class="contentImagePlacement">
-    </div>
-  <div class="contentImagePlacement">
-    </div>
-  <div class="contentImagePlacement">
-    </div>
-  <div class="contentImagePlacement">
-    </div>
-  <div class="contentImagePlacement">
-    </div>
+      <a href="https://archive.org/details/080101001_201811">
+  <img id="biggerImg" class="modalImg" src="grey.jpg" alt="photo" style="width:80%; max-width: 400px">
+</a>
+<a href="https://archive.org/details/DigitalArgumentFinalCut_201810">
+  <img id="biggerImg" class="modalImg" src="remixVid.jpg" alt="photo" style="width:80%; max-width: 400px">
+</a>
+  <div id="myModal" class="modal">
+  <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <span class="next">next</span>
+    <img class="modal-content" id="img101">
+  <div id="caption"></div>
+  </div>
+  <script>
+  var modal = document.getElementById("myModal");
+  var imgs = document.getElementsByClassName('modalImg');
+  var modalImg = document.getElementById("img101");
+  var captionText = document.getElementById("photo");
+  var index = 0;
+
+  for(var i = 0; i < imgs.length; i++){
+    var thisIndex = i;
+    imgs[i].index = thisIndex;
+    imgs[i].onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      // captionText.innerHTML = this.alt;
+      index = this.index;
+    }
+
+  }
+  var next = document.getElementsByClassName("next")[0];
+  next.onclick = function () {
+    index++;
+    index%=imgs.length;
+    modal.style.display = "block";
+    modalImg.src = imgs[index].src;
+    // captionText.innerHTML = this.alt;
+    index = imgs[index].index;
+
+  }
+  var span = document.getElementsByClassName("close")[0];
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+</script>
     </div>
 
     <div class="contactMeHomepage">
