send over red rover

--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -132,7 +132,7 @@
     }
   </script> -->
 
-    <img id="biggerImg5" src="artboard2.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <img id="biggerImg5" src="sleepingGirlinCityPII.jpg" alt="photo" style="width:80%; max-width: 300px">
     <!-- <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img101">
