--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,9 +10,9 @@
 
     <div class="homepage">
       <div class="background">
-        <a href="index.html">
+        <!-- <a href="index.html"> -->
       <img src="titleSlide1.png">
-    </a>
+    <!-- </a> -->
     </div>
 
     <div class= "categoriesHome">
