--- a/weeklies/index.html
+++ b/weeklies/index.html
@@ -52,6 +52,81 @@
       <p>
 
     <h1>weekly 4</h1>
+      <h2>All Watched Over by Machines of Loving Grace: Episode II</h2>
+      <p>The definition of cybernetics, as addressed in the video, is not the<br>
+        way that I picture it. In the video, they related it to ecosystems and<br>
+        the natural world, relaying that the world was built on feedback loops<br>
+        and that every person was just a part of a bigger system. In my mind,<br>
+        I visualize cybernetics like wires connecting technology and society<br>
+        digitally. I think about the service networks in Newark, New Jersey<br>
+        that fuel Wall Street’s stock market. When I think about cybernetics<br>
+        like an ecosystem, however, I feel a responsibility to keep the natural<br>
+        world in my peripheral vision. It feels like something that should not<br>
+        be forgotten in day to day actions.<br>
+        </p>
+      <p>
+        As for the way that cybernetics relates to culture, the video brought<br>
+        up a governor of South Africa dominating over marginalized groups in<br>
+        the sixties. The feedback loop comparison made it seem like nature is<br>
+        a never-changing force, and that no matter what humans do, the<br>
+        environment will counteract upon these actions and continue its<br>
+        stabilization. When using this understanding of nature to create a<br>
+        framework for social dynamics, marginalized groups are perpetually<br>
+        disempowered. The white European dominance is reinforced. However,<br>
+        cybernetics should not be understood in this way when being used as<br>
+        a framework to relate to humans. I think that cybernetics shows that<br>
+        we should be held accountable for our actions. We are interrelated<br>
+        with the natural world, and to each other. It is our duty, as parts<br>
+        of the grand system, to put our best foot forward and pick up our<br>
+        weakest links. If cybernetics was seen in this light, then our<br>
+        societies would run smoother, and politicians would not corruptly<br>
+        override the good of their people. We should all learn from the past<br>
+        so that we can live a splendid future. Cybernetics should be used to<br>
+        uncover what is practical in social organization, not necessarily what<br>
+        is ideal - this is one critique I have of the ways that cybernetics has<br>
+        been applied in real life like the communes. We should not live in a<br>
+        fantasy, but rather, optimize the real world.
+      </p>
+
+    <h1>weekly 5</h1>
+    <h2>#ACCELERATE MANIFESTO for an Accelerationist Politics</h2>
+    <p>The manifesto that we read for homework rejected neoliberalism and<br>
+      capitalism, illustrating the ways that democracy in the modern era has<br>
+      failed us due to greed, and globalization. The author supported Marxism<br>
+      and his principles, saying that communism was the most efficient and<br>
+      ultimate form of economic and social organization - he/she was not<br>
+      overly critical of this economic model and for that, I felt like I was<br>
+      critical of the manifesto. However, the rejection of neoliberalism,<br>
+      post-economic crisis, and the rejection of capitalism are two principles<br>
+      I support. Our society is too focused on materialism and greed.<br>
+      Technological advancement seems to further perpetuate these inevitable<br>
+      results of capitalism. When I think about the proposed post-capitalism,<br>
+      I see it as an economic model that rejects greed and sees technology as a<br>
+      tool for social connection and a responsibility to help the earth.
+    </p>
+    <p>Part of the rejection of our current economic models involves the word<br>
+      acceleration, rather than progress. I see the use of the former word just<br>
+      like social scientists using the word equity instead of equality. The<br>
+      latter is like a post-it word - it has great social context that makes<br>
+      its definition expand beyond its literal meaning. Progress has been used<br>
+      to cover up oppression too much in history, which is the reason why the<br>
+      author favors the word acceleration in my opinion.
+    </p>
+    <p>As for gender involvement in this article, I felt like the manifesto<br>
+      wrote in such a way that it completely disregarded the difference between<br>
+      genders. I understand that this stance is used to act as an umbrella for<br>
+      every citizen of the world, however, the social experience of a person<br>
+      is very much dependent on their gender identity. There are physiological<br>
+      differences between men and women, ones that we cannot change if we want<br>
+      our species to live beyond our time. A woman is expected to stay at<br>
+      home for a time after having a child, not just due to historical context,<br>
+      but also because there is usually a connection between mother and child<br>
+      that begins in the womb. This connection is important to nurture, and<br>
+      as such, the disregard of various gender experiences in the manifesto<br>
+      enunciates how our society is still refusing to accept differences among<br>
+      different identity groups that any amount of social groups will be<br> 
+      able to change.
+    </p>
 
     <h3>daisy's weeklies</h3>
 
