--- a/portfolio/aboutMe.html
+++ b/portfolio/aboutMe.html
@@ -32,9 +32,9 @@
     </div>
 
 
-        <div class="infographic">
-          <img src="Word Art.png">
-        </div>
+        <!-- <div class="infographic"> -->
+          <!-- <img src="Word Art.png"> -->
+        <!-- </div> -->
 
     <div class="contactMeHomepage">
       <div class="next">
