--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -44,7 +44,7 @@
   <div class="contentImagePlacement">
     <img src="artboard7.jpg">
     </div> -->
-    <img id="biggerImg" src="artboard9.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <img id="biggerImg" class="modalImg" src="artboard9.jpg" alt="photo" style="width:80%; max-width: 300px">
       <!-- <div id="myModal" class="modal">
       <span class="close">&times;</span>
       <img class="modal-content" id="img101">
@@ -66,7 +66,7 @@
       }
     </script> -->
 
-  <img id="biggerImg2" src="artboard3.jpg" alt="photo" style="width:80%; max-width: 300px">
+  <img id="biggerImg2" class="modalImg" src="artboard3.jpg" alt="photo" style="width:80%; max-width: 300px">
     <!-- <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img101">
@@ -88,7 +88,7 @@
     }
   </script> -->
 
-    <img id="biggerImg3" src="artboard8.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <img id="biggerImg3" class="modalImg" src="inClassII.png" alt="photo" style="width:80%; max-width: 300px">
     <!-- <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img101">
@@ -110,7 +110,7 @@
     }
   </script> -->
 
-    <img id="biggerImg4" src="artboard1.png" alt="photo" style="width:80%; max-width: 300px">
+    <img id="biggerImg4" class="modalImg" src="artboard1.png" alt="photo" style="width:80%; max-width: 300px">
     <!-- <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img101">
@@ -132,7 +132,7 @@
     }
   </script> -->
 
-    <img id="biggerImg5" src="sleepingGirlinCityPII.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <img id="biggerImg5" class="modalImg" src="artboard2.jpg" alt="photo" style="width:80%; max-width: 300px">
     <!-- <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img101">
@@ -154,7 +154,7 @@
     }
   </script> -->
 
-    <img id="biggerImg6" src="artboard4.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <img id="biggerImg6" class="modalImg" src="artboard4.jpg" alt="photo" style="width:80%; max-width: 300px">
     <!-- <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img101">
@@ -176,7 +176,7 @@
     }
   </script> -->
 
-    <img id="biggerImg7" src="artboard5.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <img id="biggerImg7" class="modalImg" src="artboard5.jpg" alt="photo" style="width:80%; max-width: 300px">
     <!-- <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img101">
@@ -198,7 +198,7 @@
     }
   </script> -->
 
-    <img id="biggerImg8" src="artboard6.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <img id="biggerImg8" class="modalImg" src="artboard6.jpg" alt="photo" style="width:80%; max-width: 300px">
     <!-- <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img101">
