--- a/landingPage/landingPage.html
+++ b/landingPage/landingPage.html
@@ -3,19 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>DaisyLBell git</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="landingpage.css">
   </head>
   <body>
 
-    <div class="otherBody">
-    </div>
+<div id="Title"> IML 300:<br>
+  Daisy Bell Landing Page</div>
 
-    <div id="Title">
-      <p>Daisy Bell Landing Page</p>
-    </div>
+  <a href src="https://daisylbell.github.io/portfolio/index.html" style="text-decoration: none">
+    <!-- make the link work to the portfolio -->
+  <div class="headings"> Project 1</div>
+</a>
 
-    <div class="base">
-      </div>
+  <div class="subtext"> Part 1</div>
+  <div class="subtext"> Part 2</div>
+  <div class="subtext"> Fan Page</div>
+
+  <div class="headings"> Project 2</div>
+
+  <div class="subtext"> Part 1</div>
+  <div class="subtext">
+    <iframe src="iml 300 project 2 part 1.pdf" width="90%" height="600px">
+  </iframe>
+  </div>
+  </div>
+  <div class="subtext"> Part 2</div>
 
   </body>
 </html>
