--- a/weeklies/index.html
+++ b/weeklies/index.html
@@ -124,8 +124,16 @@
       that begins in the womb. This connection is important to nurture, and<br>
       as such, the disregard of various gender experiences in the manifesto<br>
       enunciates how our society is still refusing to accept differences among<br>
-      different identity groups that any amount of social groups will be<br> 
+      different identity groups that any amount of social groups will be<br>
       able to change.
+    </p>
+
+    <h1>weekly 6</h1>
+    <h2>XENOFEMINISM: A Politics for Alienation</h2>
+    <p>
+      <img src="weekly6_Q1.png" width="50%" style="margin-bottom: 70px">
+      <img src="weekly6_Q2.png" width="50%" style="margin: 20px">
+      <img src="weekly6_Q3.png" width="50%">
     </p>
 
     <h3>daisy's weeklies</h3>
