--- a/portfolio/home.html
+++ b/portfolio/home.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="tester.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display">
     <title>tester homepage</title>
   </head>
   <body>
@@ -31,7 +32,9 @@
       </div>
 
     <div class="downwardArrow">
+      <a href="testerPage.html">
       <img src="pointer.png">
+    </a>
       </div>
 
   </div>
