--- a/storyboardSite/tile7.html
+++ b/storyboardSite/tile7.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="aesthetics.css">
-   <title>IML 300 Narrative Page 2</title>
+    <title>Daisy Bell Narrative</title>
   </head>
   <body>
 
