--- a/storyboardSite/page5.html
+++ b/storyboardSite/page5.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="aesthetics.css">
-    <title>IML300 Narrative Page 5</title>
+    <title>Daisy Bell Narrative</title>
   </head>
   <body>
 
