--- a/storyboardSite/page3.html
+++ b/storyboardSite/page3.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="aesthetics.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Daisy Bell Narrative</title>
   </head>
   <body>
@@ -23,17 +24,25 @@
            <div id="position3">
              <img src="bucketSorta.png" width="120px" z-index="6">
            </div>
-           <div id="position4">
-             <img src="bucket.png" width="120px" z-index="6">
+         <div class = "fill" draggable="true">
+             <img src="bucket.png" width="120px">
            </div>
-         </div>
+           </div>
+
          <div class="next">
            <a href="tile8.html">
          <img src="next.png">
        </a>
+       <div class="homePageP2">
+         <a href="story.html">
+         <img src="button.png" style="width: 50px">
+       </a>
        </div>
-    </div>
 
+
+
+     </div>
+</div>
     <!-- <div class="box1">
       <div class="wordCentered" style="transform:translate(-50%, -3%)">SPECIAL TASK</div>
       <div class="wordCenteredSmallerPage3">The two find a spare seed when <br>
@@ -51,6 +60,8 @@
        </a>
      </div>
     </div> -->
+
+    <script src="myjs.js"></script>
 
   </body>
 </html>
