--- a/storyboardSite/page4.html
+++ b/storyboardSite/page4.html
@@ -22,5 +22,12 @@
       </div>
     </div>
 
+
+    <div class="homeButton">
+      <a href="story.html">
+      <img src="button.png" style="width: 50px">
+    </a>
+    </div>
+
   </body>
 </html>
