--- a/storyboardSite/story.html
+++ b/storyboardSite/story.html
@@ -26,6 +26,13 @@
     <img src="next.png">
   </a>
   </div>
+
+  <div class="homeButton">
+    <a href="story.html">
+    <img src="button.png" style="width: 50px">
+  </a>
+  </div>
+  
     </div>
 
     <!-- <div class="box3">
@@ -70,5 +77,6 @@
     </div>
     </div> -->
 
+<script src="myjs.js"></script>
   </body>
 </html>
