--- a/storyboardSite/tile3.html
+++ b/storyboardSite/tile3.html
@@ -14,11 +14,22 @@
     </div>
       <div class="wordContentLeft"> The rich used seed stockpiles <br>& food computers
       to <br>create hospitable <br><br><br><br><br><br><br><br>civilizations known as <br>"Eco-Oases".</div>
-    </div>
     <div class="next">
       <a href="tile4.html">
     <img src="next.png">
   </a>
   </div>
+
+  <div id="homePage3">
+    <a href="story.html">
+    <img src="button.png" style="width: 50px">
+  </a>
+  </div>
+
+</div>
+
+
+
+
   </body>
 </html>
