--- a/storyboardSite/tile5.html
+++ b/storyboardSite/tile5.html
@@ -22,6 +22,13 @@
         <img src="start.png">
       </a>
     </div>
+
+    <div class="homeButton">
+      <a href="story.html">
+      <img src="button.png" style="width: 50px">
+    </a>
+    </div>
+
     </div>
 
   </body>
