--- a/storyboardSite/tile6.html
+++ b/storyboardSite/tile6.html
@@ -80,6 +80,14 @@
         <img src="next.png">
       </a>
       </div>
+
+      <div id="homePage5">
+        <a href="story.html">
+        <img src="button.png" style="width: 50px">
+      </a>
+      </div>
+
+
     </div>
 
   </body>
