--- a/weeklies/index.html
+++ b/weeklies/index.html
@@ -136,6 +136,55 @@
       <img src="weekly6_Q3.png" width="50%">
     </p>
 
+    <h1>weekly 7</h1>
+    <h2>Breathing, Chapters 1 & 5<br> by Franco "Bifo" Berardi</h2>
+    <p>The recent piece about poetry spoke about our relation to prose, and why<br>
+       it is relevant in the modern world. I have always felt as though poetry <br>
+       describes aspects of life that the common person cannot wrap their<br>
+      finger around. It is creates meaning by combining words that otherwise <br>
+      would never be compared or contrasted. Poetry gives us a new way to <br>
+      understand language and a new way to look at the world around us. This <br>
+      sort of meaning-making is best understood while learning a new language <br>
+      other than our mother-tongue. In this practice, we hear new words that <br>
+      have a common meaning with how we naturally see the world. Suddenly, <br>
+      prose and words take on a new light, and meaning is bent to the will of <br>
+      the mind. Before college, I took French for nearly a decade. It is a <br>
+      beautiful and rhythmic language that not only helps one learn English <br>
+      -and its origin- but also ways that the learner can revisualize the world <br>
+      around them. My French teacher Mme Dahn had us read many french poets. <br>
+      We read Pascal, Baudelaire, Rimbaud, and Hugo. The way the words were <br>
+      strung was beautiful and mysterious and creative. It helped us learn <br>
+      French greater than we had before, but it also helped my classmates and <br>
+      I set new eyes on the world. It became more vibrant than before, and I <br>
+      encourage everyone to explore the greatness of prose.</p>
+
+    <h1>weekly 8</h1>
+    <h2>Gender Accelerationism: G/ACC</h2>
+    <p>This weekly discussed the gender politics associated with computer <br>
+      programming and the context behind those politics. It is sort of like a <br>
+      cycle - the trans woman has the greatest connection to technology -what <br>
+      I like thinking as “cracking” the code. Yet, by identifying with <br>
+      femininity, these trans women complicate the visual that computer <br>
+      programming is a man’s occupation. Women are seen as second-class to men, <br>
+      and that they mimic masculinity if they try to reach for more power. <br>
+      However, the powerful trans women mimic feminine aspects. The circle <br>
+      relating computer programming and technology to one gender over another <br>
+      is either completed or complicated by trans women. There is another <br>
+      aspect of gender politics that the article mentions, this being <br>
+      reproduction and the continuation of humans as a species. The <br>
+      introduction of the Internet and the expanded technologies available now <br>
+      tend to oversexualize feminity, and what is desired in a woman. The text <br>
+      says that this complicates reproduction by creating a desire among men <br>
+      for a robotic or digital woman, making them compromise their own ability <br>
+      to carry on the species. The trans woman has, too, given up this <br>
+      possibility. Therefore, the entire identity of technology implies the end <br>
+      of the human race, and that there cannot be a gender associated with it. <br>
+      Humanity can make the entire system come crashing down, and introduce <br>
+      another bout of neo-classicism, in which, the female resorts to a <br>
+      reproductive occupation. However, it is not likely that technology will <br>
+      be tossed aside now that it has become incredibly useful. Therefore, <br>
+      technology should not have a gender assigned to it.</p>
+
     <h3>daisy's weeklies</h3>
 
   </body>
