--- a/storyboardSite/page2.html
+++ b/storyboardSite/page2.html
@@ -19,6 +19,13 @@
         <img src="next.png">
       </a>
       </div>
+
+      <div id="homePage4">
+        <a href="story.html">
+        <img src="button.png" style="width: 50px">
+      </a>
+      </div>
+
     </div>
 
 
@@ -46,7 +53,6 @@
       </a>
     </div>
     </div> -->
-
 
 
   </body>
