--- a/storyboardSite/page5.html
+++ b/storyboardSite/page5.html
@@ -23,7 +23,16 @@
     <img src="next.png">
   </a>
   </div>
+
+  <div class="homePageP2">
+    <a href="story.html">
+    <img src="button.png" style="width: 50px">
+  </a>
   </div>
+
+
+  </div>
+
 
   <!-- <div class="box1">
     <div id="plant">
