--- a/storyboardSite/tile2.html
+++ b/storyboardSite/tile2.html
@@ -14,11 +14,19 @@
       <div id="underwater">
       <img src="underWater2.png">
     </div>
+
+    <div id="homePage2">
+      <a href="story.html">
+      <img src="button.png" style="width: 50px">
+    </a>
+    </div>
+
     <div class="next">
       <a href="tile3.html">
     <img src="next.png">
   </a>
   </div>
+
     </div>
 
   </body>
