--- a/storyboardSite/tile4.html
+++ b/storyboardSite/tile4.html
@@ -23,6 +23,14 @@
       <img src="next.png">
     </a>
     </div>
+
+    <div class="homeButton">
+      <a href="story.html">
+      <img src="button.png" style="width: 50px">
+    </a>
+    </div>
+
+
     </div>
 
   </body>
