--- a/storyboardSite/tile7.html
+++ b/storyboardSite/tile7.html
@@ -21,6 +21,15 @@
       <img src="okay.png">
       </a>
     </div>
+
+
+    <div class="homePageP2">
+      <a href="story.html">
+      <img src="button.png" style="width: 50px">
+    </a>
+    </div>
+
+
     </div>
 
   </body>
