--- a/storyboardSite/tile8.html
+++ b/storyboardSite/tile8.html
@@ -9,7 +9,7 @@
   <body>
 
     <div class="box1">
-      <div class="wordCentered" style="transform:translate(-50%, -3%)">SPECIAL TASK</div>
+      <div class="special">SPECIAL TASK</div>
       <div class="wordCenteredSmallerPage3">The two find a spare seed when <br>
         distributing water to <br>
         a rich person's house.<br><br>
@@ -24,6 +24,15 @@
        <img src="return.png" style="height: 80px">
        </a>
      </div>
+
+
+     <div class="homePageP2">
+       <a href="story.html">
+       <img src="button.png" style="width: 50px">
+     </a>
+     </div>
+
+
     </div>
 
   </body>
