--- a/storyboardSite/tile9.html
+++ b/storyboardSite/tile9.html
@@ -19,6 +19,13 @@
         <img src="home.png">
         </a>
         </div>
+
+        <div class="homePageP2">
+          <a href="story.html">
+          <img src="button.png" style="width: 50px">
+        </a>
+        </div>
+
     </div>
 
   </body>
