--- a/landingPage/landingPage.html
+++ b/landingPage/landingPage.html
@@ -7,27 +7,33 @@
   </head>
   <body>
 
-<div id="Title"> IML 300:<br>
-  Daisy Bell Landing Page</div>
+    <a href="DaisyLBell.github.io/weeklies/index.html" style="text-decoration: none">
+        <div class="Title"> IML 300:<br>
+          Daisy Bell Landing Page</div>
+          </a>
 
-  <a href src="https://daisylbell.github.io/portfolio/index.html" style="text-decoration: none">
-    <!-- make the link work to the portfolio -->
-  <div class="headings"> Project 1</div>
-</a>
-
-  <div class="subtext"> Part 1</div>
-  <div class="subtext"> Part 2</div>
-  <div class="subtext"> Fan Page</div>
-
-  <div class="headings"> Project 2</div>
-
-  <div class="subtext"> Part 1</div>
-  <div class="subtext">
-    <iframe src="iml 300 project 2 part 1.pdf" width="90%" height="600px">
-  </iframe>
+  <div class="rectangle">
+    <a href="https://daisylbell.github.io/weeklies/index.html">
+  <div class="navigation">
+    <p>weeklies</p>
   </div>
+  </a>
+  <a href="project1.html">
+  <div class="navigation">
+    <p>project 1</p>
   </div>
-  <div class="subtext"> Part 2</div>
+  </a>
+  <a href="project2.html">
+  <div class="navigation">
+    <p>project 2</p>
+  </div>
+  </a>
+  <a href="project3.html">
+  <div class="navigation">
+    <p>project 3</p>
+  </div>
+  </a>
+  </div>
 
   </body>
 </html>
