--- a/landingPage/project2.html
+++ b/landingPage/project2.html
@@ -38,7 +38,13 @@
 
 
 <!-- body -->
-    <div class="headings"> Project 2</div>
+    <div class="headings"> Project 2<br>
+      <img src="P2P2_Wireframe2.png"><br>
+      <img src="p1.png"><br>
+      <img src="p2.png"><br>
+      <img src="p3.png"><br>
+      <img src="p4.png">
+    </div>
 
     <div class="subtext"> Part 1</div>
     <div class="subtext">
