--- a/landingPage/project2.html
+++ b/landingPage/project2.html
@@ -38,23 +38,29 @@
 
 
 <!-- body -->
-    <div class="headings"> Project 2<br>
-      <div class="subtext">
-      <img src="P2P2_Wireframe2.png"><br>
-      <img src="p1.png"><br>
-      <img src="p2.png"><br>
-      <img src="p3.png"><br>
-      <img src="p4.png">
-      </div>
-    </div>
+    <div class="headings"> Project 2</div>
 
     <div class="subtext"> Part 1</div>
     <div class="subtext">
       <iframe src="iml 300 project 2 part 1.pdf" width="90%" height="600px">
     </iframe>
     </div>
-    <div class="subtext"> Part 2</div>
+    <div class="subtext"> Part 2<br>
+      <div class="subtext">
+      <img src="P2P2_Wireframe2.png"><br>
+      <img src="p1.png"><br>
+      <img src="p2.png"><br>
+      <img src="p3.png"><br>
+      <img src="p4.png">
+      </div
+    </div>
 
+  <div class="subtext"> Part 3</div>
+  <div class="subtext">
+    <a href="https://daisylbell.github.io/storyboardSite/story.html">
+    <p>https://daisylbell.github.io/story<br>boardSite/story.html</p>
+    </a>
+    </div>
 
     <!-- bottom -->
       <div class="bottom"></div>
