connecting landing page and weeklies page

--- a/landingPage/project1.html
+++ b/landingPage/project1.html
@@ -8,7 +8,7 @@
   <body>
 
 <!-- top part -->
-<a href="DaisyLBell.github.io/weeklies/index.html" style="text-decoration: none">
+<a href="landingPage.html" style="text-decoration: none">
     <div class="Title"> IML 300:<br>
       Daisy Bell Landing Page</div>
       </a>
