--- a/weeklies/index.html
+++ b/weeklies/index.html
@@ -6,7 +6,11 @@
     <title></title>
   </head>
   <body>
-    <div class= title-style>daisy's weeklies</div>
+
+<a href="https://daisylbell.github.io/landingPage/landingPage.html" style="text-decoration: none">
+    <div class="title-style">daisy's weeklies</div>
+    </a>
+
     <h1>weekly 1</h1>
     <h2> <div class= book-title> Vaster Than Empires and More Slow </div> by Ursula le Guin</h2>
     <p>
@@ -185,7 +189,14 @@
       be tossed aside now that it has become incredibly useful. Therefore, <br>
       technology should not have a gender assigned to it.</p>
 
+      <a href="https://daisylbell.github.io/landingPage/landingPage.html" style="text-decoration: none">
     <h3>daisy's weeklies</h3>
+  </a>
+
+  <a href="https://daisylbell.github.io/landingPage/landingPage.html" style="text-decoration: none">
+      <div class="Title"> IML 300:<br>
+        Daisy Bell Landing Page</div>
+        </a>
 
   </body>
 </html>
