--- a/landingPage/project2.html
+++ b/landingPage/project2.html
@@ -8,7 +8,7 @@
   <body>
 
 <!-- top part -->
-<a href="DaisyLBell.github.io/weeklies/index.html" style="text-decoration: none">
+<a href="landingPage.html" style="text-decoration: none">
     <div class="Title"> IML 300:<br>
       Daisy Bell Landing Page</div>
       </a>
@@ -47,12 +47,8 @@
     </div>
     <div class="subtext"> Part 2<br>
       <div class="subtext">
-      <img src="P2P2_Wireframe2.png"><br>
-      <img src="p1.png"><br>
-      <img src="p2.png"><br>
-      <img src="p3.png"><br>
-      <img src="p4.png">
-      </div
+      <img src="wireframe.png">
+      </div>
     </div>
 
   <div class="subtext"> Part 3</div>
