--- a/landingPage/project1.html
+++ b/landingPage/project1.html
@@ -49,6 +49,10 @@
 
 
 <!-- bottom -->
+<a href="landingPage.html" style="text-decoration: none">
+    <div class="Title"> IML 300:<br>
+      Daisy Bell Landing Page</div>
+      </a>
   <div class="bottom"></div>
 
   </body>
