--- a/landingPage/project2.html
+++ b/landingPage/project2.html
@@ -42,7 +42,7 @@
 
     <div class="subtext"> Part 1</div>
     <div class="subtext">
-      <iframe src="iml 300 project 2 part 1.pdf" width="90%" height="600px">
+      <iframe src="iml 300 project 2 part 1.pdf" width="70%" height="600px">
     </iframe>
     </div>
     <div class="subtext"> Part 2<br>
@@ -57,8 +57,15 @@
     <p>https://daisylbell.github.io/story<br>boardSite/story.html</p>
     </a>
     </div>
+    <div class="subtext">
+      <iframe src="p2p3.pdf" width="70%" height="600px">
+    </iframe></div>
 
     <!-- bottom -->
+    <a href="landingPage.html" style="text-decoration: none">
+        <div class="Title"> IML 300:<br>
+          Daisy Bell Landing Page</div>
+          </a>
       <div class="bottom"></div>
 
   </body>
