--- a/landingPage/project3.html
+++ b/landingPage/project3.html
@@ -41,10 +41,20 @@
     <div class="headings"> Project 3</div>
 
     <div class="subtext"> Part 1</div>
+    <div class="subtext">
+      <iframe src="p3p1.pdf" width="70%" height="600px">
+    </iframe></div>
     <div class="subtext"> Part 2</div>
+    <div class="subtext">
+      <iframe src="p3p2.pdf" width="70%" height="600px">
+    </iframe></div>
     <div class="subtext"> Part 3</div>
 
     <!-- bottom -->
+    <a href="landingPage.html" style="text-decoration: none">
+        <div class="Title"> IML 300:<br>
+          Daisy Bell Landing Page</div>
+          </a>
       <div class="bottom"></div>
 
   </body>
