bottom of page updates

--- a/landingPage/project1.html
+++ b/landingPage/project1.html
@@ -49,9 +49,8 @@
 
 
 <!-- bottom -->
-<a href="landingPage.html" style="text-decoration: none">
-    <div class="Title"> IML 300:<br>
-      Daisy Bell Landing Page</div>
+<a href="project1.html" style="text-decoration: none">
+    <div class="Title"> back to top^^^</div>
       </a>
   <div class="bottom"></div>
 
