--- a/landingPage/project3.html
+++ b/landingPage/project3.html
@@ -51,9 +51,8 @@
     <div class="subtext"> Part 3</div>
 
     <!-- bottom -->
-    <a href="landingPage.html" style="text-decoration: none">
-        <div class="Title"> IML 300:<br>
-          Daisy Bell Landing Page</div>
+    <a href="project3.html" style="text-decoration: none">
+        <div class="Title"> back to top^^^</div>
           </a>
       <div class="bottom"></div>
 
