bottom of weeklies is connected to top

--- a/weeklies/index.html
+++ b/weeklies/index.html
@@ -189,7 +189,7 @@
       be tossed aside now that it has become incredibly useful. Therefore, <br>
       technology should not have a gender assigned to it.</p>
 
-      <a href="https://daisylbell.github.io/landingPage/landingPage.html" style="text-decoration: none">
+      <a href="index.html" style="text-decoration: none">
     <h3>daisy's weeklies</h3>
   </a>
 
