updates to fanpage and added p1 to landing page

--- a/fanpage/index.html
+++ b/fanpage/index.html
@@ -15,8 +15,7 @@
   <div class="container">
     <div class = "img-container">
     <div style="font-size:15vw" class= "centered">kitty.</div>
-    <a>
-      <a href="kitty2.html">
+      <a href="page2.html">
     <img src ="kitty11.png" alt="kitty" style= "width:80%;" />
   </a>
   </div>
