--- a/landingPage/project1.html
+++ b/landingPage/project1.html
@@ -43,9 +43,16 @@
       <div class="headings"> Project 1</div>
     </a>
 
-      <div class="subtext"> Part 1</div>
-      <div class="subtext"> Part 2</div>
+      <div class="subtext"> Part 1&2</div>
+      <div class="subtext">
+        <iframe src="p1_p1.pdf" width="70%" height="600px"></iframe>
+      </div>
+      <div class="subtext"> Part 3</div>
+      <div class="subtext"><img src="p1_p3.jpg" width="400px"></div>
       <div class="subtext"> Fan Page</div>
+      <div class="subtext"><a href ="https://daisyLBell.github.io/fanpage/index.html">click here for fanpage</a></div>
+      <div class="subtext">Part 4</div>
+      <div class="subtext"><a href="https://daisylbell.github.io/portfolio/index.html">click here for portfolio</a></div>
 
 
 <!-- bottom -->
