--- a/application/homepage.html
+++ b/application/homepage.html
@@ -39,7 +39,7 @@
 
 
       <div class="headerShadow"><img src="Rectangle13.png"></div>
-    <div class="header"><img src="logo.png"></div>
+    <div class="header"><img src="theBulletin.png"></div>
     <div class="baseRectangle">
       <!-- <img src="Rectangle13.png" style="position: absolute, z-index: -1"> -->
       <div class="buttonsAtBase"><img src="home.png"></div>
@@ -47,8 +47,12 @@
       <div class="buttonsAtBase"><img src="add.png"></div>
       <div class="buttonsAtBase"><img src="profile.png"></div>
     </div>
-
     </div>
+
+    <div class="topBlack"></div>
+    <div class="bottomBlack"></div>
+    <div class="leftBlack"></div>
+    <div class="rightBlack"></div>
 
   </body>
 </html>
