put titles onto slides

--- a/application/homepage.html
+++ b/application/homepage.html
@@ -13,27 +13,50 @@
 
       <div class="slidingStuff">
 
-      <div class="one"><img src="pinkSlideRight.png" height="200px"></div>
+      <div class="one">
+        <div class="title"><img src="TopFiveMusicTitle.png"></div>
+        <img src="pinkSlideRight.png" height="200px">
+      </div>
 
-      <div class="two"><img src="yellowSquare.png" height="200px"></div>
+      <div class="two">
+        <div class="atTheMomentTitle"><img src="AtTheMomentSongTitle.png"></div>
+        <img src="yellowSquare.png" height="200px"></div>
 
-      <div class="three"><img src="blueSlide.png" height="200px"></div>
+      <div class="three">
+        <div class="title"><img src="TopFiveTVTitle.png" style="padding-left: 640px"></div>
+      <img src="blueSlide.png" height="200px"></div>
 
-      <div class="four"><img src="yellowSquare.png" height="200px"></div>
+      <div class="four">
+        <div class="atTheMomentTitle"><img src="AtTheMomentTVTitle.png"></div>
+        <img src="yellowSquare.png" height="200px"></div>
 
-      <div class="five"><img src="orangeSlide.png" height="200px"></div>
+      <div class="five">
+        <div class="title"><img src="TopFiveMoviesTitle.png"></div>
+        <img src="orangeSlide.png" height="200px"></div>
 
-      <div class="six"><img src="yellowSquare.png" height="200px"></div>
+      <div class="six">
+        <div class="atTheMomentTitle"><img src="AtTheMomentMoviesTitle.png"></div>
+        <img src="yellowSquare.png" height="200px"></div>
 
-      <div class="seven"><img src="pinkSlideRight.png" height="200px"></div>
+      <div class="seven">
+        <div class="title"><img src="TopFiveBooksTitle.png" style="padding-left: 620px"></div>
+        <img src="pinkSlideRight.png" height="200px"></div>
 
-      <div class="eight"><img src="yellowSquare.png" height="200px"></div>
+      <div class="eight">
+        <div class="atTheMomentTitle"><img src="AtTheMomentBooksTitle.png"></div>
+        <img src="yellowSquare.png" height="200px"></div>
 
-      <div class="nine"><img src="blueSlide.png" height="200px"></div>
+      <div class="nine">
+        <div class="title"><img src="TopFiveArtistsTitle.png"></div>
+        <img src="blueSlide.png" height="200px"></div>
 
-      <div class="ten"><img src="yellowSquare.png" height="200px"></div>
+      <div class="ten">
+        <div class="atTheMomentTitle"><img src="AtTheMomentArtistTitle.png"></div>
+        <img src="yellowSquare.png" height="200px"></div>
 
-      <div class="eleven"><img src="orangeSlide.png" height="200px"></div>
+      <div class="eleven">
+        <div class="title"><img src="TopFiveAlbumsTitle.png" style="padding-left: 610px"></div>
+        <img src="orangeSlide.png" height="200px"></div>
 
       </div>
 
